# MDnotes

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-15-mdnotes.md
docs/superpowers/specs/: 2026-04-15-mdnotes-design.md
src/: app.rs  lib.rs  main.rs
src/io/: config.rs  file.rs
src/markdown/: mod.rs  model.rs  parser.rs  serializer.rs
src/ui/: content.rs  mod.rs  sidebar.rs  statusbar.rs  toolbar.rs  welcome.rs
tests/: config_tests.rs  model_tests.rs  parser_tests.rs  serializer_tests.rs
