[package]
name = "mdnotes"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "轻量级跨平台 Markdown 阅读与编辑器"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
rfd = "0.15"
